@@ -1,6 +1,6 @@
 {
   "name": "simp-sssd",
-  "version": "7.13.0",
+  "version": "7.13.1",
   "author": "SIMP Team",
   "summary": "Manages SSSD",
   "license": "Apache-2.0",
