@@ -45,6 +45,7 @@ describe 'compliance_markup', type: :class do
                              target_compliance_profile: target_profile
                            })
           end
+          # rubocop:disable RSpec/InstanceVariable
           let(:compliance_report) do
             @compliance_report ||= JSON.parse(
                 catalogue.resource("File[#{facts[:puppet_vardir]}/compliance_report.json]")[:content],
@@ -57,6 +58,7 @@ describe 'compliance_markup', type: :class do
 
             @compliance_profile_data
           end
+          # rubocop:enable RSpec/InstanceVariable
 
           let(:pre_condition) do
             %(
